fixed the spacing in grid css

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,4 +1,4 @@
-.grid{
+.grid {
   display: flex;
   flex-wrap: wrap;
 }
@@ -8,23 +8,29 @@
 }
 
 @media only screen and (min-width: 25em) {
-.s-1 {
-  width: 100%;
- }
 
- @media only screen and (min-width: 38em) {
-   .m-1 {
-     width: 100%;
-   }
-   .m-1-2 {
-     width: 50%;
-   }
-   @media only screen and (min-width: 60em) {
-     .l-1-3 {
-       width: 33.3333%;
-     }
-   }
+  .s-1 {
+    width: 100%;
+  }
 
+}
 
+@media only screen and (min-width: 38em) {
+
+  .m-1 {
+    width: 100%;
+  }
+
+  .m-1-2 {
+    width: 50%;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .l-1-3 {
+    width: 33.3333%;
+  }
 
 }
